some css changes

--- a/default.css
+++ b/default.css
@@ -19,6 +19,7 @@
 html, body{
     padding: 0;
     margin: 0;
+    scroll-behavior: smooth;
 }
 
 body *{
@@ -88,7 +89,6 @@ h6{font-size: 16px;}
 
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 3em 30em;
     grid-template-areas: 
         'nav-intro nav-intro'
         'left-column right-column'
@@ -125,6 +125,7 @@ h6{font-size: 16px;}
 
 .dots-wrapper{
     display: flex;
+    padding: 10px;
 }
 
 #dot-1{
@@ -160,6 +161,7 @@ h6{font-size: 16px;}
 #profile_pic{
     display: block;
     margin: 0 auto;
+
     height: 200px;
     width: 200px;
     object-fit: cover;
@@ -300,9 +302,9 @@ h6{font-size: 16px;}
 
 .post{
     border: 1px solid var(--borderColor);
-    -webkit-box-shadow: -1px 1px 3px -1px rgba(0,0,0,0.75);
-    -moz-box-shadow: -1px 1px 3px -1px rgba(0,0,0,0.75);
-    box-shadow: -1px 1px 3px -1px rgba(0,0,0,0.75);
+    -webkit-box-shadow: -2px 7px 21px -9px rgba(0,0,0,0.75);
+	-moz-box-shadow: -2px 7px 21px -9px rgba(0,0,0,0.75);
+	box-shadow: -2px 7px 21px -9px rgba(0,0,0,0.75);
 }
 
 .thumbnail{
@@ -386,4 +388,19 @@ h6{font-size: 16px;}
     .right-column{
         justify-content: center;
     }
+}
+
+@media screen and (max-width: 400px){
+	#preview-shadow{
+		max-width: 280px;
+		height: 180px;
+		padding-left: 10px;
+		padding-top: 10px;
+	}
+
+	#preview{
+		width: 280px;
+
+	}
+
 }
